tests/ui/traits/const-traits/unsatisfied-const-trait-bound.stderr
error: `-Znext-solver=globally` and `generic_const_exprs` are incompatible, using them at the same time is not allowed
  --> $DIR/unsatisfied-const-trait-bound.rs:5:30
   |
LL | #![feature(const_trait_impl, generic_const_exprs)]
   |                              ^^^^^^^^^^^^^^^^^^^
   |
   = help: remove one of these features

error[E0277]: the trait bound `T: const Trait` is not satisfied
  --> $DIR/unsatisfied-const-trait-bound.rs:29:37
   |
LL | fn accept0<T: Trait>(_: Container<{ T::make() }>) {}
   |                                     ^

error[E0277]: the trait bound `T: const Trait` is not satisfied
  --> $DIR/unsatisfied-const-trait-bound.rs:33:50
   |
LL | const fn accept1<T: ~const Trait>(_: Container<{ T::make() }>) {}
   |                                                  ^

error[E0277]: the trait bound `Ty: const Trait` is not satisfied
  --> $DIR/unsatisfied-const-trait-bound.rs:22:15
   |
LL |     require::<Ty>();
   |               ^^
   |
note: required by a bound in `require`
  --> $DIR/unsatisfied-const-trait-bound.rs:8:15
   |
LL | fn require<T: const Trait>() {}
   |               ^^^^^^^^^^^ required by this bound in `require`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
